objects/How_To__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>Internal_Links__c</fullName>
        <label>Internal Links</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Situation__c</fullName>
        <label>Situation</label>
        <length>8192</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Support_Response__c</fullName>
        <label>Support Response</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>How To</label>
    <pluralLabel>How To&apos;s</pluralLabel>
</CustomObject>